--- a/modules/Plugin_Main/src/main/res/layout/fragment_home.xml
+++ b/modules/Plugin_Main/src/main/res/layout/fragment_home.xml
@@ -19,15 +19,15 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <View
-            android:id="@+id/btn_test"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@color/black"
-            android:onClick="@{event}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <com.example.main.grid.impl.GridRecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff"
+            android:fadingEdge="none"
+            android:focusable="false"
+            android:gravity="center"
+            android:listSelector="#00000000"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
