--- a/modules/Plugin_Main/src/main/res/layout/fragment_home.xml
+++ b/modules/Plugin_Main/src/main/res/layout/fragment_home.xml
@@ -15,18 +15,14 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/window_background"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:background="@color/window_background"
+        android:gravity="center"
         android:orientation="horizontal">
 
-        <com.example.main.widget.ShadowView
-            android:id="@+id/shadow"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
